--- a/apps/docs/src/pages/charts/donut-chart.mdx
+++ b/apps/docs/src/pages/charts/donut-chart.mdx
@@ -69,9 +69,14 @@ Use the `splitBy` property to split the data into different groups.
 
 ### Custom ECharts options
 
-If necessary, you can customize the chart's option and take advantage of the additional properties offered by ECharts.
-In this sample we are customizing the legend to display round icons, the labels to show next to each piece of the chart,
-and radius of the chart so that it has a pie look instead of a donut look. We also change the styles so that margins between the slices are visible.
+If needed, you can customize the chart using ECharts options.
+
+In this example, we:
+
+- Use round icons in the legend
+- Position labels next to each slice
+- Adjust the `radius` to create a pie look instead of a donut
+- Style slice borders to make the margins visible
 
 ```tsx live
 <HvDonutChart
