--- a/apps/docs/src/pages/charts/treemap.mdx
+++ b/apps/docs/src/pages/charts/treemap.mdx
@@ -12,7 +12,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Usage
 
-This example demonstrates a simple tree map chart with multiple levels of data.
+This example shows a simple tree map chart with multiple levels of hierarchical data.
 
 ```tsx live
 <HvTreemapChart
@@ -160,8 +160,8 @@ This example demonstrates a simple tree map chart with multiple levels of data.
 
 ### Custom ECharts options
 
-If necessary, you can customize the chart's option and take advantage of the additional properties offered by ECharts.
-In this sample we are customizing the styles of the items in the tree map.
+You can customize the chart using ECharts options.  
+In this example, the item styles of the tree map are customized to control appearance and visual distinction.
 
 ```tsx live
 <HvTreemapChart
