--- a/apps/docs/src/pages/components/checkbox.mdx
+++ b/apps/docs/src/pages/components/checkbox.mdx
@@ -39,7 +39,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Controlled
 
-Controlled checkbox. Clicking the Checkbox 1 does nothing, while clicking Checkbox 2 changes both inputs.
+You can share state control from a parent component. Clicking **Checkbox 1** has no effect, while clicking **Checkbox 2** updates the state and toggles both checkboxes.
 
 ```tsx live
 import { useState } from "react";
