--- a/apps/docs/src/pages/components/number-input.mdx
+++ b/apps/docs/src/pages/components/number-input.mdx
@@ -30,7 +30,6 @@ export const getStaticProps = async ({ params }) => {
 <br />
 
 <Callout type="info">
-  The `HvNumberInput` component shares the same API as the `HvInput` component.
-  Please check the [HvInput component page](/components/input) for
-  documentation.
+  The `HvNumberInput` component shares the same API as `HvInput`. For full
+  documentation, see the [HvInput component page](/components/input).
 </Callout>
