--- a/apps/docs/src/pages/components/skeleton.mdx
+++ b/apps/docs/src/pages/components/skeleton.mdx
@@ -58,8 +58,7 @@ If you pass no `width` or `height` props, the skeleton will adapt to the content
 
 ### Background image
 
-You can use a background image for the skeleton component by using the `backgroundImage` prop.
-This is useful when you want to show a placeholder image while the real image is being loaded.
+Use the `backgroundImage` prop to show a placeholder image in `HvSkeleton`—ideal for image loading scenarios.
 
 ```tsx live
 <HvSkeleton
@@ -73,7 +72,7 @@ This is useful when you want to show a placeholder image while the real image is
 
 ### Custom animation
 
-You can use custom CSS animations with the skeleton component by defining your own in your styles.
+You can apply custom CSS animations to `HvSkeleton` by defining them in your own styles.
 
 ```tsx live
 <HvSkeleton
