--- a/apps/docs/src/pages/components/stack.mdx
+++ b/apps/docs/src/pages/components/stack.mdx
@@ -32,8 +32,8 @@ export const getStaticProps = async ({ params }) => {
 
 ### Custom direction
 
-You can set the `direction` prop to different values depending on the breakpoint you're currently on. The example
-below shows a stack in a column format for breakpoints `xs` and `sm`, and in a row format for breakpoints `md` and above.
+You can set the `direction` prop responsively based on breakpoints.  
+For example, use a column layout on `xs` and `sm`, and switch to a row layout on `md` and above.
 
 ```tsx live
 <HvStack direction={{ xs: "column", md: "row" }} spacing="xs" divider={false}>
@@ -45,7 +45,7 @@ below shows a stack in a column format for breakpoints `xs` and `sm`, and in a r
 
 ### Custom divider
 
-The `divider` property can be a boolean (rendering the default divider), or a `ReactNode` to use as a custom divider.
+The `divider` prop accepts either a boolean—to render the default divider—or a `ReactNode` for a custom divider element.
 
 ```tsx live
 <HvStack direction="row" className="flex items-center" divider={<DropRight />}>
