--- a/apps/docs/src/pages/components/tabs.mdx
+++ b/apps/docs/src/pages/components/tabs.mdx
@@ -70,8 +70,8 @@ export default function Demo() {
 
 ### Icons
 
-You can use icons in the tabs by passing the `icon` and `iconPosition` props to the `HvTab` component.
-If you only want to show icons with no text, you can hide the labels by setting the `label` prop to `undefined`.
+Add icons to tabs using the `icon` and `iconPosition` props in `HvTab`.  
+To display icon-only tabs, set the `label` prop to `undefined`.
 
 ```tsx live
 import { useState } from "react";
