--- a/apps/docs/src/pages/docs/contributing.mdx
+++ b/apps/docs/src/pages/docs/contributing.mdx
@@ -27,7 +27,7 @@ Maintainers will be responsible for reviewing and merging the Pull Request.
    ```sh
    git checkout -b YOUR_BRANCH_NAME master
    ```
-3. Make sure you follow our [coding standards](#coding-standards), and add new test cases where appropriate following the [testing guidelines](#testing).
+3. Make sure you follow our [coding standards](#coding-standards), and add new test cases where appropriate following the [testing guidelines](/docs/guidelines#other-conventions).
 4. Commit your changes using a descriptive commit message that follows our [commit message guidelines](#commit-message-guidelines).
 5. Once ready for feedback from other contributors and maintainers, push your commits to your fork:
    ```sh
