--- a/apps/docs/src/pages/docs/introduction.mdx
+++ b/apps/docs/src/pages/docs/introduction.mdx
@@ -34,7 +34,7 @@ With a comprehensive suite of components and detailed usage guidelines, **UI Kit
 
 We're here to support your journey with **UI Kit**.
 
-- **Chat with Us**: Join the discussion in [#ui-kit](#)
+- **Chat with Us**: Join the discussion in [#ui-kit](https://hitachivantara-eng.slack.com/archives/GJ9AC2LMB)
 - **Report Issues**: Visit our [GitHub repository](https://github.com/lumada-design/hv-uikit-react) to report bugs or suggest features.
 
 ## License
