--- a/apps/docs/src/pages/components/tags-input.mdx
+++ b/apps/docs/src/pages/components/tags-input.mdx
@@ -29,7 +29,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Custom tag addition
 
-You can configure custom tag addition behavior, via the `commitTagOn` or `commitOnBlur` properties.
+Customize tag addition behavior using the `commitTagOn` and `commitOnBlur` props.
 
 ```tsx live
 <HvTagsInput
@@ -43,8 +43,8 @@ You can configure custom tag addition behavior, via the `commitTagOn` or `commit
 
 ### Controlled
 
-Control the input with the `value`/`onChange` props.
-The value is an array of either `string` or [`HvTag` props](/components/tag?tab=props).
+Control the input using the `value` and `onChange` props.  
+The `value` should be an array of `string` or [`HvTag` props](/components/tag?tab=props).
 
 ```tsx live
 import { useState } from "react";
@@ -69,7 +69,7 @@ export default function Demo() {
 
 ### Controlled validation
 
-Control the addition and removal of tags with the `onAdd` and `onRemove` props respectively.
+Use the `onAdd` and `onRemove` props to control when tags are added or removed.
 
 ```tsx live
 import { useState } from "react";
@@ -115,8 +115,8 @@ export default function Demo() {
 
 ### Suggestions
 
-Auto-complete suggestions can be shown by using the `suggestionListCallback` prop, similar to `HvInput`'s.
-The `suggestionsLoose` allows adding any value besides the suggestions.
+Show auto-complete suggestions using the `suggestionListCallback` prop, similar to `HvInput`.  
+Use `suggestionsLoose` to allow values outside the suggestion list.
 
 ```tsx live
 import { useState } from "react";
